# ketljit

./: .gitignore  CMakeLists.txt  README.md
cmake/: mingw_win_configure.bat  msvc_win_configure.bat  vscode_linux_configure.sh
include/ketl/: function.h  ketl.h  ketl.hpp  memory.h  type.h  type_impl.h  utils.h  variable.h
src/: assert.h  context.c  executable_memory.c  executable_memory.h  function.c  function_impl.h  heap_memory.c  heap_memory.h  ketl.c  ketl.cpp  ketl_impl.h  logging.c  logging.h  managed_memory.c  managed_memory.h  memory.c  memory.h  memory_impl.h  operators.h  type.c  type_impl.h  unmanaged_memory.c  unmanaged_memory.h  utils.c  variable.c  variable_impl.h
src/compiler/: bnf_node.h  bnf_parser.c  bnf_parser.h  bnf_scheme.c  bnf_scheme.h  bytecode_compiler.c  bytecode_compiler.h  compiler.c  compiler.h  ir_builder.c  ir_builder.h  ir_compiler.c  ir_compiler.h  ir_node.h  lexer.c  lexer.h  syntax_node.h  syntax_parser.c  syntax_parser.h  syntax_solver.c  syntax_solver.h  token.h
src/containers/: atomic_strings.c  atomic_strings.h  common.c  common.h  int_map.c  int_map.h  object_pool.c  object_pool.h  stack.c  stack.h
tests/: check_tests.cpp  check_tests.h  compile_tricks.h  main.cpp  speed_tests.cpp  speed_tests.h
tests/check_tests/: branching.cpp
tests/speed_tests/: branching.cpp
